# researcher-portal-backend

./: InitializationVector.json  Makefile  Readme.md  pyproject.toml
app/: main.py
app/api/: data_frame_0.csv  data_frame_1.csv  pag_dashoard.py  researcher_portal.py
app/models/: cohort.py
app/utils/: analysis.py  cohort_filter.py  data_model.json  utils_pag.py
data/49634f0c-df0b-40c7-9d7e-ab96aa98b0b2/: dataset_header.json
data/8b54a57a-c186-4a25-b43e-9927ea6ae296/: dataset_header.json
docker/: Dockerfile  Entrypoint.sh  decrypt_file.py  requirements.txt
sail_data_layer/: csvv1_dataset_serializer.py  data_frame.py  tabular_dataset.py
