[tool.poetry]
name = "researcher-portal-backend"
version = "0.1.0"
description = ""
authors = ["Aman Trigunait"]
readme = "README.md"
packages = [{include = "researcher_portal_backend"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
scipy = "^1.10.1"
pandas = "^2.0.1"
statsmodels = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"